# selene

./: .env.example  .gitattributes  .gitignore  Documentation.md  ML_models_API.md  Mock_testing_strategy.md  README.md  doc.md  implementation_guide.md  main.py  pyproject.toml  render.yaml  requirements.txt  run_pipeline.py  test_cluster_exclusions.py  test_high_risk.json  test_low_confidence.json  test_patient.json  tokens.txt
_docs/: CLUSTERING_MODEL.md  DATASETS.md  ML_models_API.md  SIMULATION_MODEL.md  UI_API_REFERENCE.md  hackathon_submission.md  implementation_guide.md  notes.md  pdf_upload_feature.md  pipeline_verification.md  tech.md
agent/: __init__.py  cluster_exclusions.py  graph.py  llm.py  patient_extractor.py  pdf_parser.py  pill_database.py  safe_gate.py  state.py
agent/nodes/: candidate_gen.py  cluster.py  convergence.py  planner.py  risk_assessor.py  simulator.py  utility.py  validator.py
agent/prompts/: cluster_eval.txt  convergence_decision.txt  (+4 more)
data/: pill_reference_db.csv  pills_mock.csv
drugs/: 2 and 1_2 Hackers_fda_faers_events_faers_events_flat.csv  2 and 1_2 Hackers_fda_pregnancy_blockers_pregnancy_blockers_flat.csv  2 and 1_2 Hackers_pull_fda_birth_control_ndc.py  2 and 1_2 Hackers_pull_fda_drug_labels.py  2 and 1_2 Hackers_pull_fda_faers_events.py  2 and 1_2 Hackers_pull_fda_pregnancy_blockers.py  build_drug_reference.py
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
hf_space/: Dockerfile  README.md  push_to_hf.sh  requirements.txt  serve.py
tests/: mock_server.py  test_graph.py  test_nodes.py
(+58 files in other folders)
